--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,13 @@ project(algorithms)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(algorithms
+add_executable(dp1
     DP/背包问题01.cpp
+)
+
+add_executable(
+    dp2
+    DP/完全背包.cpp
 )
 
 add_executable(asd
